Added Rent,Notification and Review integration tests
Added Rent,Notification and Review integration tests
